// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`csf-story-kind No default export 1`] = `
Object {
  "components": Object {},
  "kinds": Object {},
  "stories": Object {
    "myStory": Object {
      "arguments": Array [],
      "loc": Object {
        "end": Object {
          "column": 31,
          "line": 1,
        },
        "start": Object {
          "column": 23,
          "line": 1,
        },
      },
      "name": "myStory",
      "source": "() => {}",
    },
  },
}
`;

exports[`csf-story-kind default export - no title 1`] = `
Object {
  "components": Object {},
  "kinds": Object {},
  "stories": Object {},
}
`;

exports[`csf-story-kind default export - with title 1`] = `
Object {
  "components": Object {},
  "kinds": Object {
    "Storybook/Blocks/ControlsTable": Object {
      "parameters": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 41,
              "line": 2,
            },
            "start": Object {
              "column": 2,
              "line": 2,
            },
          },
          "name": "title",
          "value": "Storybook/Blocks/ControlsTable",
        },
      ],
      "source": "
        export default {
          title: 'Storybook/Blocks/ControlsTable',
        };
      ",
      "title": "Storybook/Blocks/ControlsTable",
    },
  },
  "stories": Object {},
}
`;

exports[`csf-story-kind default export - with title and controls 1`] = `
Object {
  "components": Object {},
  "kinds": Object {
    "Storybook/Kind": Object {
      "parameters": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 25,
              "line": 2,
            },
            "start": Object {
              "column": 2,
              "line": 2,
            },
          },
          "name": "title",
          "value": "Storybook/Kind",
        },
        Object {
          "loc": Object {
            "end": Object {
              "column": 26,
              "line": 3,
            },
            "start": Object {
              "column": 2,
              "line": 3,
            },
          },
          "name": "component",
          "value": "ControlsTable",
        },
        Object {
          "loc": Object {
            "end": Object {
              "column": 3,
              "line": 13,
            },
            "start": Object {
              "column": 2,
              "line": 4,
            },
          },
          "name": "parameters",
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 5,
                  "line": 12,
                },
                "start": Object {
                  "column": 4,
                  "line": 5,
                },
              },
              "name": "controls",
              "value": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 7,
                      "line": 11,
                    },
                    "start": Object {
                      "column": 6,
                      "line": 6,
                    },
                  },
                  "name": "name",
                  "value": Array [
                    Object {
                      "loc": Object {
                        "end": Object {
                          "column": 31,
                          "line": 7,
                        },
                        "start": Object {
                          "column": 8,
                          "line": 7,
                        },
                      },
                      "name": "type",
                      "value": "ControlTypes.TEXT",
                    },
                    Object {
                      "loc": Object {
                        "end": Object {
                          "column": 21,
                          "line": 8,
                        },
                        "start": Object {
                          "column": 8,
                          "line": 8,
                        },
                      },
                      "name": "label",
                      "value": "Name",
                    },
                    Object {
                      "loc": Object {
                        "end": Object {
                          "column": 21,
                          "line": 9,
                        },
                        "start": Object {
                          "column": 8,
                          "line": 9,
                        },
                      },
                      "name": "value",
                      "value": "Mark",
                    },
                    Object {
                      "loc": Object {
                        "end": Object {
                          "column": 19,
                          "line": 10,
                        },
                        "start": Object {
                          "column": 8,
                          "line": 10,
                        },
                      },
                      "name": "order",
                      "value": 9999,
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
      "source": "
      export default {
        title: 'Storybook/Kind',
        component: ControlsTable,
        parameters: {
          controls: {
            name: {
              type: ControlTypes.TEXT,
              label: 'Name',
              value: 'Mark',
              order: 9999,
            },
          },
        },
      };
      ",
      "title": "Storybook/Kind",
    },
  },
  "stories": Object {},
}
`;

exports[`csf-story-kind default export - with title and parameters 1`] = `
Object {
  "components": Object {},
  "kinds": Object {
    "Storybook/Blocks/ControlsTable": Object {
      "parameters": Array [
        Object {
          "loc": Object {
            "end": Object {
              "column": 41,
              "line": 2,
            },
            "start": Object {
              "column": 2,
              "line": 2,
            },
          },
          "name": "title",
          "value": "Storybook/Blocks/ControlsTable",
        },
        Object {
          "loc": Object {
            "end": Object {
              "column": 3,
              "line": 8,
            },
            "start": Object {
              "column": 2,
              "line": 3,
            },
          },
          "name": "parameters",
          "value": Array [
            Object {
              "loc": Object {
                "end": Object {
                  "column": 28,
                  "line": 4,
                },
                "start": Object {
                  "column": 4,
                  "line": 4,
                },
              },
              "name": "component",
              "value": "ControlsTable",
            },
            Object {
              "loc": Object {
                "end": Object {
                  "column": 5,
                  "line": 7,
                },
                "start": Object {
                  "column": 4,
                  "line": 5,
                },
              },
              "name": "addonControls",
              "value": Array [
                Object {
                  "loc": Object {
                    "end": Object {
                      "column": 18,
                      "line": 6,
                    },
                    "start": Object {
                      "column": 6,
                      "line": 6,
                    },
                  },
                  "name": "smart",
                  "value": false,
                },
              ],
            },
          ],
        },
      ],
      "source": "
        export default {
          title: 'Storybook/Blocks/ControlsTable',
          parameters: {
            component: ControlsTable,
            addonControls: {
              smart: false,
            }
          },
        };
      ",
      "title": "Storybook/Blocks/ControlsTable",
    },
  },
  "stories": Object {},
}
`;
